<resources>
    <string name="app_name">PeoplemonGO!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="fullName">Username</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_username_or_password">Please fillout all fields.</string>
    <string name="valid_email">Please enter a vaild email</string>
    <string name="passwords_dont_match">Your passwords do not match!</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDe_LTCyjaC44OsTvrFE2xciHnvO6U9fY4</string>
    <string name="save">Save</string>
    <string name="error_retrieving_image">Error Retrieving Image</string>
    <string name="check_in_failed">Check In Failed</string>
    <string name="checked_in">You Checked In!</string>
    <string name="run_away">They Ran Away!</string>
    <string name="change_picture">Change Picture</string>
    <string name="me">ME!</string>
    <string name="location_failed">Location services failed</string>
    <string name="check_in">You Checked In</string>
    <string name="nearby_users">A Wild Interapter Appears!</string>
    <string name="no_users">There\'s nobody here!</string>
    <string name="find_user_failed">Failed to Find Users</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="list_failed">Error retrieving Peoplemon list</string>
    <string name="profile_info_error">Error Retrieving User Info</string>
    <string name="got_em">You got \'em!</string>
    <string name="cant_catch">You can\'t catch yourself!</string>
    <string name="ran_away">They ran away!</string>
    <string name="error_retreiving_image">Error Retrieving Image</string>
</resources>
