<?xml version="1.0" encoding="utf-8"?>
<com.example.matthewwatson.peoplemongo.Views.RegisterView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user_name_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/email_address_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_1_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_confirm_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"/>

    <ProgressBar
        android:id="@+id/spinner"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</com.example.matthewwatson.peoplemongo.Views.RegisterView>